// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewTask render edit screen 1`] = `
<KeyboardAvoidingView
  behavior="padding"
  enabled={true}
  keyboardVerticalOffset={0}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "space-around",
      "width": "100%",
    }
  }
>
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Task title"
    rejectResponderTermination={true}
    style={
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderBottomColor": "rgb(255, 25, 123)",
        "borderBottomWidth": 1,
        "fontSize": 20,
        "padding": "5%",
        "width": "100%",
      }
    }
    testID="inputTitle"
    underlineColorAndroid="transparent"
    value="tarea1"
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Task description"
    rejectResponderTermination={true}
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "rgb(255, 255, 255)",
        "padding": "5%",
        "paddingBottom": "20%",
        "width": "100%",
      }
    }
    testID="inputDescription"
    underlineColorAndroid="transparent"
    value="desc tarea 1"
  />
</KeyboardAvoidingView>
`;

exports[`NewTask render new task screen 1`] = `
<KeyboardAvoidingView
  behavior="padding"
  enabled={true}
  keyboardVerticalOffset={0}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "column",
      "justifyContent": "space-around",
      "width": "100%",
    }
  }
>
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Task title"
    rejectResponderTermination={true}
    style={
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderBottomColor": "rgb(255, 25, 123)",
        "borderBottomWidth": 1,
        "fontSize": 20,
        "padding": "5%",
        "width": "100%",
      }
    }
    testID="inputTitle"
    underlineColorAndroid="transparent"
    value=""
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Task description"
    rejectResponderTermination={true}
    style={
      Object {
        "alignItems": "flex-start",
        "backgroundColor": "rgb(255, 255, 255)",
        "padding": "5%",
        "paddingBottom": "20%",
        "width": "100%",
      }
    }
    testID="inputDescription"
    underlineColorAndroid="transparent"
    value=""
  />
</KeyboardAvoidingView>
`;
